first batch of changes for OPAL API
