# doc-api-swagger.yml
@@ -1,15 +1,15 @@
 swagger: '2.0'
 info:
   version: 0.0.2
-  title: Eae-interface
+  title: Opal-interface
   license:
     name: MIT
-    url: 'https://github.com/dsi-icl/eae-interface/blob/master/LICENSE'
-  description: eAE interface
+    url: 'https://github.com/opal-project/opal-interface/blob/master/LICENSE'
+  description: OPAL interface
 paths:
   /status:
     get:
-      description: Status report. Part of the standard API for all the eae components
+      description: Status report. Part of the standard API for all the opal components
       responses:
         '200':
           description: 'Status report is active, replies the current status'
@@ -29,14 +29,14 @@ paths:
           description: desc
           schema:
             $ref: '#/definitions/statusModel'
-            
-            
-            
-            
+
+
+
+
   /job:
     post:
       description: Get a specific job
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -45,19 +45,19 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - jobID
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               jobID:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               jobID: jhfwd8u210ujfdsasfd
       responses:
         '200':
@@ -74,12 +74,12 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
+
+
   /job/getAll:
     post:
       description: Get all jobs not archieved. Admin only
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -88,16 +88,16 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
       responses:
         '200':
           description: Sends back an array of jobs
@@ -115,36 +115,36 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
-            
-            
+
+
+
+
   /job/create:
     post:
       description: Creates a new job to be computed on the eAE
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
         - name: request body
           in: body
-          description: Create new job. Job object is passed as JSON string obligatorily contained the following fields - type, main, params, input. Value of type can be one of the following - python2, spark, r, tensorflow. 
+          description: Create new job. Job object is passed as JSON string obligatorily contained the following fields - type, main, params, input. Value of type can be one of the following - python2, spark, r, tensorflow.
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - job
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               job:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               job: '{"type":"python2","main":"test.py","params":["Vi_Veri_Veniversum_Vivus_Vici"],"input":["test.py","faust.txt"]}'
       responses:
         '200':
@@ -168,7 +168,7 @@ paths:
               status: OK
               jobID: jkfj32twkl423fj1ru
               carriers: carrier:3000
-              
+
         '401':
           description: The request is not well formed
           schema:
@@ -184,14 +184,14 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
-            
-            
+
+
+
+
   /job/cancel:
     post:
       description: Cancels a job. Check that user requesting is owner of the job or Admin
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -200,19 +200,19 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - jobID
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               jobID:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               jobID: jhfwd8u210ujfdsasfd
       responses:
         '200':
@@ -238,14 +238,14 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
+
+
   /job/results:
     post:
       description: >-
         Retrieve the results for a specific job by sending back the carriers
         where they are available.
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -254,19 +254,19 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - jobID
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               jobID:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               jobID: jhfwd8u210ujfdsasfd
       responses:
         '200':
@@ -294,7 +294,7 @@ paths:
       description: >-
         Checks that the request is coming from an Admin and sends back the
         statuses of all the services in the cluster.
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -303,16 +303,16 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
       responses:
         '200':
           description: desc
@@ -331,14 +331,14 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
-            
-            
+
+
+
+
   /user:
     post:
       description: Sends back the profile of the requested user. By admin only
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -348,29 +348,29 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - requestedUsername
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               requestedUsername:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               requestedUsername: chanTaiMan
-            
-        
-          
+
+
+
       responses:
         '200':
           description: User object is returned.
           schema:
             $ref: '#/definitions/userModel'
-              
+
         '401':
           description: The request is not well formed
           schema:
@@ -381,12 +381,12 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
+
+
   /user/create:
     post:
       description: Create a new user to get access to the platform. By admin only
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -396,19 +396,19 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - newUser
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               newUser:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               newUser: '{"username": "chanTaiMan","type": "STANDARD"}'
       responses:
         '200':
@@ -425,13 +425,13 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
-            
+
+
+
   /user/delete:
     delete:
       description: Delete an existing user and remove their access to the platform.
-      consumes: 
+      consumes:
         - application/json
         - application/x-www-form-urlencoded
       parameters:
@@ -441,19 +441,19 @@ paths:
           schema:
             type: object
             required:
-              - eaeUsername
-              - eaeUserToken
+              - opalUsername
+              - opalUserToken
               - userToBeDeleted
             properties:
-              eaeUsername:
+              opalUsername:
                 type: string
-              eaeUserToken:
+              opalUserToken:
                 type: string
               userToBeDeleted:
                 type: string
             example:
-              eaeUsername: admin
-              eaeUserToken: admin
+              opalUsername: admin
+              opalUserToken: admin
               userToBeDeleted: chanTaiMan
       responses:
         '200':
@@ -471,29 +471,29 @@ paths:
           schema:
             type: object
             description: eAE ErrorStack tracking the error origin
-            
-            
-            
-            
-            
-            
-            
+
+
+
+
+
+
+
   /whoareyou:
     get:
       description: Implementation of the Hyper Text Coffee Pot Control Protocol
       responses:
         '418':
           description: I am a teapot
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
+
+
+
+
+
+
+
+
+
+
 definitions:
   statusModel:
     description: Model to represent a service status
@@ -560,7 +560,7 @@ definitions:
           free:
             type: string
             description: Available memory on the system. Unit is provided in the value
-    example: 
+    example:
       ip: 172.0.0.1
       port: 8000
       computeType: []
@@ -588,10 +588,10 @@ definitions:
       type: eae_api
       version: 0.0.x
 
-            
-            
-    
-    
+
+
+
+
   jobModel:
     type: object
     properties:
@@ -673,11 +673,11 @@ definitions:
       statusLock: false
       executorIP: 127.0.0.1
       executorPort: '9876'
-      
-        
-        
-        
-        
+
+
+
+
+
   userModel:
     type: object
     properties:
